# mcp-project

./: .gitignore  Dental_Fee_Schedule.xls  README.md  agent_anthropic.py  agent_openai.py  agentsSDK.ipynb  chat_agent_openai.py  dummy_server.py  llm.py  pyproject.toml  requirements.txt  research_server.py
data/: fee-schedule-sample-new.xlsx  fee-schedule-sample-old.xlsx
papers/bell_curve/: papers_info.json
papers/laplace/: papers_info.json
papers/model_context_protocol/: papers_info.json
papers/voice_agents/: papers_info.json
