[project]
name = "mcp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.71.0",
    "arxiv>=2.2.0",
    "gradio>=5.35.0",
    "ipykernel>=7.0.1",
    "mcp>=1.10.1",
    "nest-asyncio>=1.6.0",
    "openai>=1.93.0",
    "openai-agents>=0.1.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
